# megatui

./: .dir-locals.el  .gitignore  .pre-commit-config.yaml  .ruff.toml  DEVELOPMENT.org  Makefile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: code-quality.yml  codeql.yml
megatui/: __init__.py  __main__.py  app.py  messages.py
megatui/mega/: megacmd.py
megatui/ui/: file_action.py  file_tree.py  fileitem.py  filelist.py  fileview.py  line.py  style.tcss  widgets.py
megatui/ui/screens/: account_info.py  rename.py
src/: main.py
src/megatui/: __init__.py  __main__.py  app.py  messages.py  utils.py
src/megatui/mega/: data.py  megacmd.py
src/megatui/ui/: file_tree.py  filelist.py  line.py  preview.py  style.tcss  top_status_bar.py  transfers.py
src/megatui/ui/screens/: account_info.py  confirmation.py  help.py  mkdir.py  rename.py
tests/: test_mega_parsing.py  test_megacmd.py
